--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hi world
+<!DOCTYPE html>
+</html>
+    <head>
+        <title>CSCE 190: Miles Lee</title>
+    </head>
+    <body>
+        <hi>Miles Lee's CSCE 190 site</hi>
+    </body>
+<html>
