--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <title>CSCE 190: Miles Lee</title>
     </head>
     <body>
-        <hi>Miles Lee's CSCE 190 site</hi>
+        <h1>Miles Lee's CSCE 190 site</h1>
+
+        <p>Class of 2026<p>
+        </p>I enjoy coding<p>
     </body>
 <html>
