--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
     <body>
         <h1>Miles Lee's CSCE 190 site</h1>
 
-        <p>Class of 2026<p>
-        </p>I enjoy coding<p>
+            <section class = "assignment">
+                <a href="Files/Problem Statement - CSCE 190.pdf"><img src= "Images/Problem_statement.png"></a>
+            <section class = "assignment details">
+                <h2><a href="Files/Problem Statement - CSCE 190.pdf">"Problem Statement: Vacation Planner</h2></a>
+                <P>Tourism is an important factor worldwide that allows for a sharing of culture and money. We
+                    want to encourage our users to go out into the world and find new and exciting places. However
+                    many people struggle to find such places to travel to and so end up not traveling. Our solution
+                    should be to provide a way for users to find places to vacation to.
+                    </P>
+                    <a href="Files/Problem Statement - CSCE 190.pdf">problem statement</a>
+
+</section>
+        </section>
+        
     </body>
 <html>
